# telegram_bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  bot.py  docker-compose.yml  jobs.py  listener.py  pyproject.toml  requirements.txt  ruff.toml  server.py
.github/workflows/: manual.yml
alembic/: env.py
alembic/versions/: 1ae2304286c8_settings.py  22479a155b10_settins.py  306f4357f800_add_image_to_anime.py  3b7846458642_next_air_at_nullable.py  459d9c2ba7f2_add_uniques.py  582ff2c72d17_manga_status.py  609e0c70d503_add_user_table.py  73ad6f199bc4_last_notification_at_nullable.py  80dd8464d1c9_add_dates.py  88b0daad505b_uniqueexchange.py  a3605d6fe5cb_add_image_url_to_user.py  ad41ab9c49cc_manga.py  bea2d1882b0f_currencyexchange.py  d2ba90f0f644_add_anime_table.py  dc7d09f32aee_add_name_to_anime.py  e57e60542a47_add_unique_user.py  e740b78c327b_add_user_sessions.py
clients/: base.py  manga.py  shikimori.py
config/: __init__.py
currency/: index.html
db/: models.py  utils.py
front/: package-lock.json  package.json
front/src/: App.js
jobs/: run.py  tasks.py  utils.py
resources/: index.html
src/: constants.py  enums.py  utils.py
src/clients/: base.py  currency.py  manga.py  shikimori.py  telegram_web.py
src/config/: __init__.py
src/context/: __init__.py
src/db/: __init__.py  enums.py  models.py  utils.py
src/di/: container.py
src/jobs/: run.py  service.py  tasks.py  utils.py
src/queues/: connection.py  publisher.py  topology.py
src/schemas/: web.py
src/web/routers/: api.py  currency.py
