[project]
name = "imsolnce-bot"
version = "0.1.0"
description = "Telegram bot for anime/manga new episodes notifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.6",
    "aiosignal==1.3.2",
    "alembic==1.15.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "fastapi[standard]>=0.115.12",
    "frozenlist==1.6.0",
    "gql==3.5.2",
    "graphql-core==3.2.4",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "multidict==6.4.4",
    "pip==25.1.1",
    "pre-commit>=4.2.0",
    "propcache==0.3.1",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.0",
    "python-telegram-bot==22.0",
    "requests==2.32.3",
    "setuptools==78.1.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uv==0.7.9",
    "uvloop==0.21.0",
    "wheel==0.45.1",
    "yarl==1.20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
